NHSO-664 whitespace fix

--- a/web/src/style/_collapsibledialog.scss
+++ b/web/src/style/_collapsibledialog.scss
@@ -28,5 +28,6 @@
     box-sizing: border-box;
     padding: 1em;
     border-top: 1px solid $border_grey;
+    white-space: pre-line;
   }
 }
